backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: CIRCLE-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: CIRCLE
  template:
    metadata:
      labels:
        app: CIRCLE
    spec:
      containers:
      - name: CIRCLE-container
        image: CIRCLE-image:v0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "1024Mi"
