backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: circle-backend-service
spec:
  selector:
    app: circle-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: circle-frontend-service
spec:
  selector:
    app: circle-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
